--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "next": "12.2.5",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-tooltip": "^5.1.3",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
